<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_feed_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">
    <!--android:foreground="?android:attr/selectableItemBackground"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:orientation="vertical">

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/avatar_size"
                android:layout_height="@dimen/avatar_size">

                <ImageView
                    android:id="@+id/ivImg"
                    android:layout_width="@dimen/avatar_size"
                    android:layout_height="@dimen/avatar_size"
                    android:src="@mipmap/ic_launcher"/>

            </RelativeLayout>

            <android.support.v4.widget.Space
                android:layout_width="@dimen/space_small"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feed_titulo"
                    android:textSize="@dimen/text_size_small" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvSite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/subtitle"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_min" />

                    <TextView
                        android:id="@+id/tvCategoria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/feed_categoria"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/text_size_min" />

                </RelativeLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_min" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvLink"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/tvData"
                        android:text="@string/feed_link"
                        android:textColor="@color/md_grey_500"
                        android:textSize="@dimen/text_size_min" />

                    <TextView
                        android:id="@+id/tvData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/feed_data"
                        android:textColor="@color/md_grey_500"

                        android:textSize="@dimen/text_size_min" />

                </RelativeLayout>

                <android.support.v4.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_min" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_small" />

        <View
            style="@style/Divider"
            android:layout_marginLeft="@dimen/margin_huge" />

    </LinearLayout>

</FrameLayout>